--- a/.gitignore
+++ b/.gitignore
@@ -51,16 +51,16 @@ coverage.xml
 *.mo
 *.pot
 
-# Django stuff:
+# Django stuff
 *.log
 local_settings.py
 db.sqlite3
 
-# Flask stuff:
+# Flask stuff
 instance/
 .webassets-cache
 
-# Scrapy stuff:
+# Scrapy stuff
 .scrapy
 
 # Sphinx documentation
@@ -103,6 +103,6 @@ venv.bak/
 # mypy
 .mypy_cache/
 
-models/\.actor\.sdf
-
-models/\.model\.sdf
+# Build files
+models/robot_model\.sdf
+models/robot_actor\.sdf
